# x402-seller-starter

./: .env.example  .gitignore  Cargo.toml  README.md  env.example
examples/: axum_server.rs  buyer_pay.md  find_payto.rs
src/: accepts.rs  facilitator.rs  lib.rs  supported.rs  types.rs
