[package]
name = "x402-seller-starter"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reference library + Axum example: HTTP 402 Payment Required for pr402 / x402 v2 sellers."
repository = "https://github.com/miraland-labs/x402"
readme = "README.md"
keywords = ["x402", "http-402", "solana", "payments"]
categories = ["web-programming", "api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Dev-only: `find_payto` example uses `solana-pubkey` (+ curve25519) to derive vault payTo from /supported + MERCHANT_WALLET.
solana-pubkey = { version = "2.1", features = ["curve25519"] }

[[example]]
name = "axum_server"
path = "examples/axum_server.rs"

[[example]]
name = "find_payto"
path = "examples/find_payto.rs"
